--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="span-icon-1"><a href="#"><i id="icon-1" class="fas fa-globe"></i></a></span>
                 </div>
             </div>
-            
+
         </div>
         <div id="div-2">
 
@@ -38,8 +38,10 @@
                     <div class="container-fluid">
                         <h6 class="text-style-23">thales<span style="color:#000000">code</span></h6>
                         <div>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive1">
-                                <text class="text-style-25">ThalesCode<i class="fas fa-caret-right"></i><i class="fas fa-caret-right"></i></text>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarResponsive1">
+                                <text class="text-style-25">ThalesCode<i class="fas fa-caret-right"></i><i
+                                        class="fas fa-caret-right"></i></text>
                             </button>
                         </div>
                         <div class="collapse navbar-collapse" id="navbarResponsive1">
@@ -67,45 +69,60 @@
             <!-- Horizontal Navigation End-->
 
             <!-- Main Header Begin -->
-            <div id="main-header-section" class="container-fluid">
-                <h5 class="text-style-21">ThalesCode</h5>
-                <h5 class="text-style-22">The best way<br>to Learn IT</h5>
+            <div id="main-header-section" class="container-fluid padding">
+                <div class="left-section">
+                    <hr id="main-hr-1"><br>
+                    <h5 class="text-style-21">ThalesCode</h5>
+                    <h5 id="main-header-1" class="text-style-22">The best way <br>to Learn IT</h5>
+                    <h5 id="main-header-2" class="text-style-22">The best way to Learn how to<br> programming online</h5>
 
-                <!-- Vertical Navigation Begin-->
-                <div id="vertical-navbar">
-                    <div class="vertical-navbar-top">
-                        <text class="text-style-25">ThalesCode&nbsp&nbsp<i class="fas fa-caret-right"></i>&nbsp&nbsp<i class="fas fa-caret-right"></i></text>
+                    <!-- Vertical Navigation Begin -->
+                    <div id="vertical-navbar">
+                        <div class="vertical-navbar-top">
+                            <text class="text-style-25">ThalesCode&nbsp&nbsp<i
+                                    class="fas fa-caret-right"></i>&nbsp&nbsp<i class="fas fa-caret-right"></i></text>
+                        </div>
+                        <div class="vertical-navbar-bottom">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a class="nav-link nav-item-2" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link nav-item-2" href="#">training</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link nav-item-2" href="#">testimonial</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link nav-item-2" href="#">thalesblog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link nav-item-2" href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="vertical-navbar-bottom">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link nav-item-2" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-item-2" href="#">training</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-item-2" href="#">testimonial</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-item-2" href="#">thalesblog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-item-2" href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                    <!-- Vertical Navigation End -->
 
-                <div class="row two-button">
-                    <div class="col-md-3">
+                    <div class="row two-button">
                         <button id="dev" class="btn btn-lg form-control form-button-1" type="button">DEVELOPERS</button>
-                    </div>
-                    <div class="col-md-3">
+                        &nbsp&nbsp
                         <button id="com" class="btn btn-lg form-control form-button-1" type="button">COMPANIES</button>
                     </div>
+
+                    <div>
+                        <div class="jumbotron jumbotron-1">
+                            <p class="icon-2">"</p>
+                            <p class=" text-style-26">thalescode you will learn new technologies base on continues
+                                development with flexible
+                                schedules where you can focus and participate with others online. to find more come and
+                                join us.</p>
+                        </div>
+                    </div>
                 </div>
-                <!-- Vertical Navigation End-->
+                <div class="right-section">
+                    <img class="bitmap-img-1" src="img/photo.jpg">
+                </div>
             </div>
             <!-- Main Header End -->
 
@@ -130,11 +147,11 @@
                 </div>
                 <div class="jumbotron">
                     <hr style="margin-left: 0.7em;margin-top: 0em;"><br>
-                    <p class="text-style-4">
+                    <p class="text-style-27">
                         If you're brand new to the world of coding and web development,
                         it makes sense to start by teaching yourself using all the free coding resources online.
                     </p>
-                    <p class="text-style-4">
+                    <p class="text-style-27">
                         We offer you a fun and unique way to learn coding. With a fast-learning program we are based on
                         challenges using our internal custom tests. Complete them to earn honor and progress to higher
                         ranks. This is a fun way to learn programming online if you're motivated by a little
@@ -150,10 +167,11 @@
             <!-- Job Post Begin -->
             <div id="job-post-section" class="container-fluid">
                 <!-- Section Header -->
-                <h6 class="sub-header" style="color: #09ACF8;">JOB POST</h6>
+                <h6 id="job-post" class="sub-header" style="color: #09ACF8;">JOB POST</h6>
                 <div class="row sub-content-1">
                     <div class="col align-self-center">
                         <p class="text-style-1" style="color: #342A2F;">Latest Jobs</p>
+                        <p id="motivo-job-post" class="text-style-13">motivo job post</p>
                     </div>
                     <div class="col-auto">
                         <a herf="#" id="round-btn-2" class="btn btn-md pull-right">read more<span class="span-icon"><i
@@ -285,6 +303,34 @@
             </div>
             <!-- Job Post End -->
 
+            <!-- New Section Begin -->
+            <div id="new-section" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-8">
+                        <hr id="main-hr-1"><br>
+                        <h4 class="text-style-28">Get where you're going faster with ThalesCode</h4>
+                        <h6 class="text-style-27">If you're brand new to the world of coding and web development, it makes sense to
+                            start by
+                            teaching yourself using all the free coding resources online.</h6>
+                        <h6 class="text-style-27">We offer you a fun and unique way to learn coding. With a fast-learning program we
+                            are
+                            based on challenges using our internal custom tests. Complete them to earn honor and progress to higher
+                            ranks.
+                            This is a fun way to learn programming online if you're motivated by a little gamification!At the end of
+                            this
+                            program you will be able to get in awesome jobs with latest technologies in Tokyo.</h6>
+                        <div class="new-sec-btn">
+                            <a herf="#" id="round-btn-2" class="btn btn-md">read more<span class="span-icon"><i
+                                        class="fas fa-angle-right"></i></span></a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/black_bg.png" alt="...">
+                    </div>
+                </div>
+            </div>
+            <!-- New Section End -->
+
             <!-- Services Begin -->
             <div id="service-section" class="container-fluid">
                 <!-- Section Header -->
@@ -377,9 +423,11 @@
             <!-- Explore Begin -->
             <div id="explore-section" class="container-fluid"">
                 <!-- Section Header -->
-                <h6 class=" sub-header" style="color:#09ACF8;padding-left: 0.3em;">Explore</h6>
-                <div class="row sub-content-1">
-                    <h3 class="text-style-1">Thales Code Blog</h3>
+                <h6 id="explore" class="sub-header" style="color:#09ACF8;padding-left: 0.3em;">Explore</h6>
+                <div class="sub-content-1">
+                    <p id="thales-blog-1" class="text-style-1">Thales Code Blog</p>
+                    <p id="thales-blog-2" class="text-style-1">ThalesBlog</p>
+                    <p id="motivo-job-post" class="text-style-13">learn more about latest technologies</p>
                 </div>
                 <!-- Section Header End -->
                 <!-- Section Content Begin -->
@@ -565,8 +613,6 @@
             </div>
             <!-- Explore End -->
             <hr class="line-5">
-
-
             <!-- Contact Begin -->
             <div class="contact-section container-fluid">
                 <!-- Section Header -->
@@ -610,7 +656,6 @@
                 <!-- Section Header End -->
             </div>
             <!-- Contact End -->
-
             <!-- Map Begin -->
             <div id="map-section" class="container-fluid">
                 <img src="img/map2.png" width="100%" height="100%" class="under">
@@ -620,7 +665,6 @@
             <!-- Map End -->
             <br>
             <hr class="line-5" style="width: 80%;">
-
             <!-- Footer Begin -->
             <footer>
                 <div id="footer-section" class="container-fluid">
@@ -659,10 +703,8 @@
                 </div>
             </footer>
             <!-- Footer End -->
-
         </div>
     </div>
-
     <script>
         $(function () {
             $('#pill-1').on('click', function () {
@@ -682,20 +724,16 @@
                 console.log($(this));
                 $(this).siblings().toggle();
             });
-
             $('.nav-icon').on('click', function () {
                 $('.nav-body').toggle();
             });
-            
-            $('.vertical-navbar-bottom').hide();
 
-            $('.vertical-navbar-top').on('click',function(){
+            $('.vertical-navbar-bottom').hide();
+            $('.vertical-navbar-top').on('click', function () {
                 $('.vertical-navbar-bottom').toggle();
             })
         });
     </script>
-
-
 </body>
 
 </html>
