--- a/index.html
+++ b/index.html
@@ -33,46 +33,46 @@
     </div>
     <div id="div-2">
 
-        <!-- Horizontal Navigation Begin-->
-        <div id="horizontal-navbar">
-            <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                <div class="container-fluid">
-                    <h6 class="text-style-23">thales<span style="color:#000000">code</span></h6>
-                    <div>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarResponsive1">
-                            <h6 class="text-style-25">ThalesCode<i class="fas fa-caret-right"></i><i
-                                    class="fas fa-caret-right"></i></h6>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="navbarResponsive1">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active  text-style-24">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item  text-style-24">
-                                <a class="nav-link" href="#">training</a>
-                            </li>
-                            <li class="nav-item  text-style-24">
-                                <a class="nav-link" href="#">testimonial</a>
-                            </li>
-                            <li class="nav-item  text-style-24">
-                                <a class="nav-link" href="#">thalesblog</a>
-                            </li>
-                            <li class="nav-item text-style-24">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-        <!-- Horizontal Navigation End-->
-
         <!-- Main Header Begin -->
         <div id="main-header-section" class="container-fluid">
+            <!-- Horizontal Navigation Begin-->
+            <div id="horizontal-navbar">
+                <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                    <div class="container-fluid">
+                        <h6 class="text-style-23">thales<span style="color:#000000">code</span></h6>
+                        <div>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarResponsive1">
+                                <h6 class="text-style-25">ThalesCode<i class="fas fa-caret-right"></i><i
+                                        class="fas fa-caret-right"></i></h6>
+                            </button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="navbarResponsive1">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item active  text-style-24">
+                                    <a class="nav-link" href="#">Home</a>
+                                </li>
+                                <li class="nav-item  text-style-24">
+                                    <a class="nav-link" href="#">training</a>
+                                </li>
+                                <li class="nav-item  text-style-24">
+                                    <a class="nav-link" href="#">testimonial</a>
+                                </li>
+                                <li class="nav-item  text-style-24">
+                                    <a class="nav-link" href="#">thalesblog</a>
+                                </li>
+                                <li class="nav-item text-style-24">
+                                    <a class="nav-link" href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <!-- Horizontal Navigation End-->
+
             <div class="left-section">
-                <hr id="main-hr-1"><br>
+                <hr id="main-hr-1">
                 <h5 class="text-style-21">ThalesCode</h5>
                 <h5 id="main-header-1" class="text-style-22">The best way <br>to Learn IT</h5>
                 <h5 id="main-header-2" class="text-style-22">The best way to Learn how to<br> programming online</h5>
@@ -105,13 +105,13 @@
                 </div>
                 <!-- Vertical Navigation End -->
 
-                <button id="dev-pc" class="btn btn-lg form-control form-button-1" type="button">DEVELOPERS</button>
+                <button id="dev-pc" class="btn form-control form-button-1" type="button">DEVELOPERS</button>
                 &nbsp&nbsp
-                <button id="com-pc" class="btn btn-lg form-control form-button-1" type="button">COMPANIES</button>
+                <button id="com-pc" class="btn form-control form-button-1" type="button">COMPANIES</button>
 
                 <div>
-                    <div class="jumbotron jumbotron-1">
-                        <p class="icon-2">"</p>
+                    <div class="jumbotron-1">
+                        <h6 class="icon-2">"</h6>
                         <p class=" text-style-26">thalescode you will learn new technologies base on continues
                             development with flexible
                             schedules where you can focus and participate with others online. to find more come and
@@ -1180,10 +1180,11 @@
         <!-- Map End -->
         <hr class="line-5" style="width: 80%;">
         <!-- Footer Begin -->
-        <footer>
+        <!-- <footer> -->
             <div id="footer-section" class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-6 col-sm-6 col-md-3">
+                    <!-- <div class="col-xs-5 col-sm-5 col-md-3"> -->
+                    <div class="footer-1">
                         <p class="text-style-18">information</p>
                         <p class="text-style-19">
                             About us
@@ -1194,7 +1195,8 @@
                             <br>Testimonals
                         </p>
                     </div>
-                    <div class="col-xs-6 col-sm-6 col-md-3">
+                    <!-- <div class="col-xs-7 col-sm-7 col-md-3"> -->
+                    <div class="footer-2">
                         <p class="text-style-18">partners</p>
                         <p class="text-style-19">
                             Company information
@@ -1202,7 +1204,8 @@
                             <br>disclosure
                         </p>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6">
+                    <!-- <div class="col-xs-12 col-sm-12 col-md-6"> -->
+                    <div class="footer-3">
                         <p class="text-style-18">subscribe</p>
                         <div class="input-group input-group-lg">
                             <input type="text" class="form-control text-style-17"
@@ -1215,7 +1218,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        <!-- </footer> -->
         <!-- Footer End -->
     </div>
 
